# Asciiville

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CNAME  INSTALL.md  Install  LICENSE  Makefile  NOTICE  README.md  TODO  Uninstall  VERSION  _config.yml  asciiville.desktop  asciiville.txt  build  build-btop.sh  build-cbftp.sh  build-diagon.sh  build-jp2a.sh  build-nethack.sh  build-ninvaders.sh  clean  copyright  mkdeb  mkpkg  mkrelease  mkrpm  rifle.conf  tmux.conf  usage.txt
aewan/: CHANGELOG  COPYING  Makefile.in  README  TODO  absmenu.c  absmenu.h  aecat.c  aeff.c  aeff.h  aemakeflic.c  aewan.c  chtr.c  chtr.h  clipboard.c  clipboard.h  colordlg.c  colordlg.h  commands.h  configure.ac  debug_aewl.c  debug_aewl.h  document.c  document.h  editmeta.c  editmeta.h  export.c  export.h  filedlg.c  filedlg.h  handlekey.c  handlekey.h  helpdlg.c  helpdlg.h  init_aewl.c  init_aewl.h  keybind.c  keybind.h  keys.c  keys.h  (+17 more)
aewan/aewl/: aewl.c  aewl.h  allwidgets.h  button.c  button.h  field.c  field.h  form.c  form.h  form_int.h  label.c  label.h  listbox.c  listbox.h  util.c  util.h  widget.c  widget.h
aewan/bores/: Makefile  autod.c  autod.h  bores.h  darray.c  darray.h  defs.h  hashdict.c  hashdict.h  kurses.c  kurses.h  util.c  util.h
aewan/python/: NOTICE  aewan.py  test.py
games/ninvaders/: CMakeLists.txt  ChangeLog  README.md  aliens.c  aliens.h  globals.c  globals.h  highscore.c  highscore.h  nInvaders.c  nInvaders.h  player.c  player.h  ufo.c  ufo.h  view.c  view.h
jp2a/: AUTHORS  BUGS  ChangeLog  Dockerfile  Doxyfile.in  LICENSES  Makefile.am  README  configure.ac
jp2a/include/: aspect_ratio.h  curl.h  html.h  image.h  jp2a.h  options.h  round.h  terminal.h
jp2a/man/: jp2a.1
jp2a/src/: Makefile.am  aspect_ratio.c  curl.c  html.c  image.c  jp2a.c  options.c  terminal.c
jp2a/tests/: dalsnuten-256-light-x.html  dalsnuten-256-light.html  dalsnuten-256-x.html  dalsnuten-256.html  dalsnuten-color-256.txt  dalsnuten-color-ANSI.txt  dalsnuten-color-truecolor.txt  dalsnuten-color-x.html  dalsnuten-color.html  grind-256-fill.txt  grind-2grayscale-256-fill.txt  grind-2grayscale-ANSI-fill.txt  grind-2grayscale-fill-x.html  grind-2grayscale-fill.html  grind-2grayscale-truecolor-fill.txt  grind-2grayscale-x.html  grind-2grayscale.html  grind-ANSI-fill.txt  grind-color-256.txt  grind-color-ANSI.txt  grind-color-dark-fill-x.html  grind-color-x.html  (+22 more)
(+2952 files in other folders)
